Remove Nginx, configure uWSGI to serve HTTP on port 8000, update Dockerfile and README

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -3,12 +3,7 @@ module = main
 callable = app
 plugins = /usr/lib/uwsgi/python3
 
-uid = nginx
-gid = nginx
-
-socket = /tmp/uwsgi.sock
-chown-socket = nginx:nginx
-chmod-socket = 664
+http-socket = :8000
 
 cheaper = 1
 processes = %(%k + 1)
